[tool.poetry]
name = "cps-cosimulation-env"
version = "0.1.0"
description = "Python CPS co-simulation environment"
authors = ["Will Stuckey <guyfleeman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.11.2"
PYPOWER = "^5.1.16"
helics = "^3.4.0"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
scipy = "^1.11.2"
PYPOWER = "^5.1.16"
helics = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
